# synthesizability

./: .gitignore  LICENSE  README.md  Snakefile  pyproject.toml
data/processed/: disorder_cache.csv  formulas.txt  hull_membership.csv  oqmd_hull_data.csv  synthesis_data.csv  synthesis_data.pkl  synthesis_data_no_disorder.csv
data/raw/: REMAKE_MAP.csv
results/dashboard/: index.html
results/supercon/: Al3Cu2Y.json  Al8FeCo7.json  B2NbNi2.json  C2CrSc.json  C2LaRu.json  CoSi3Y.json  Cu5GePd6.json  CuNb3Zr2.json  CuSnY.json  GaHf2Nb.json  GaNbZr2.json  Gd2Fe3Ge5.json  Gd3CoSn6.json  GdGePt2.json  Hf2MoIr.json  Hf2MoNb.json  Hf2MoRe3.json  Hf2MoTi.json  Hf2Nb3Ru.json  HfMo2Zr.json  HfMoTa2.json  HfTa4Zr.json  La2PdAu2.json  La5Al3Co2.json  LaNiSi3.json  MnAl2Au6.json  (+15 more)
scripts/: README.md  analyze_susceptibility.py  build_dataframe.py  compute_disorder_probabilities.py  compute_hull_membership.py  compute_supercon_cache.py  diagnose_snakemake_dependencies.py  extract_alexandria_cifs.py  extract_mp_cifs.py  extract_oqmd_structures.py  extract_ternary_cifs.py  find_relevant_SCs.py  generate_dashboard.py  inspect_dataframe.py  inspect_missing_xrd_samples.py  inspect_xrd_files.py  plot_ss_xrd.py  plot_xrd_grids.py  plot_xrd_patterns.py  query_alexandria_phases.py  query_mp_ternary_phases.py  query_oqmd_hulls.py  query_ternary_phases.py  show_missing_xrd.py  test_composition_deviation.py  test_disorder_import.py  test_disorder_prediction.py  test_snakemake_dependencies.py  test_supercon_plugin.py  test_ternary_diagram.py  validate_oqmd_database.py  validate_xrd_files.py
(+638 files in other folders)
