[project]
name = "synthesizability"
version = "0.1.0"
description = "Analysis of DFT stability predictions vs experimental synthesizability"
authors = [
    {name = "James J. Hamlin"}
]
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "numpy (>=2.3.5,<3.0.0)",
    "pymatgen (>=2025.10.7,<2026.0.0)",
    "requests (>=2.32.5,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
