[project]
name = "synthesizability"
version = "0.1.0"
description = "Analysis of DFT stability predictions vs experimental synthesizability"
authors = [
    {name = "James J. Hamlin"}
]
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "numpy (>=2.3.5,<3.0.0)",
    "pymatgen (>=2025.10.7,<2026.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "pyperclip (>=1.11.0,<2.0.0)",
    "snakemake (>=9.16.2,<10.0.0)",
    "scipy (>=1.17.0,<2.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "torch (>=2.10.0,<3.0.0)",
    "pandarallel (>=1.6.5,<2.0.0)",
    "elementembeddings (>=0.6.1,<0.7.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{include = "synthesizability", from = "src"}]
